--- a/my-exchangerate/src/App.css
+++ b/my-exchangerate/src/App.css
@@ -1,19 +1,17 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Gloock&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* IE */
+select::-ms-expand {
+  display: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.select {
+  -o-appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
-
-.App-header {
+.app {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -21,18 +19,71 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #282c34;
 }
 
-.App-link {
-  color: #61dafb;
+.layoutBox {
+  margin-top: 25px;
+  width: 500px;
+  height: 60vh;
+  background-color: #ffebcd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  margin-top: 100px;
+  font-size: 40px;
+  color: #282c34;
+  text-align: center;
+  font-family: 'Alfa Slab One', cursive;
+  font-weight: 400;
+}
+.moneyLayoutWrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 300px;
+  width: 100%;
+  /* border: 1px solid red; */
+}
+.swap {
+  font-size: 50px;
+}
+.moneyLayout {
+  width: 400px;
+  height: 50px;
+  /* border-radius: 10px; */
+  /* background-color: #ff8c00; */
+  margin: 0 auto;
+  display: flex;
+}
+
+.unitSlect {
+  width: 25%;
+  height: 100%;
+  background-color: bisque;
+  background-color: #ff8c00;
+  text-align: center;
+  font-size: 18px;
+  line-height: 100%;
+  border-radius: 10px 0 0 10px;
+  border: none;
+}
+.unitSlect select {
+  /* display: none; */
+  border-radius: 10px 0 0 10px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: #ff8c00;
+}
+.unitSlect select option {
+  font-size: 16px;
+}
+.exchangePrice {
+  width: 75%;
+  height: 100%;
+  border-radius: 0 10px 10px 0;
+  background-color: #ff8c00;
 }
