--- a/my-exchangerate/src/App.css
+++ b/my-exchangerate/src/App.css
@@ -86,4 +86,6 @@ select::-ms-expand {
   height: 100%;
   border-radius: 0 10px 10px 0;
   background-color: #ff8c00;
+  border: none;
+  padding: 0 0 0 10px;
 }
