--- a/my-exchangerate/src/App.css
+++ b/my-exchangerate/src/App.css
@@ -78,7 +78,7 @@ select::-ms-expand {
   font-weight: 700;
 }
 .unitSlect select:focus {
-  border: none;
+  outline: none;
 }
 .unitSlect select option {
   font-size: 16px;
